Different issue running DFU under Windows 10 - mfc120.dll is missing #1182